# LongVideoHelper

./: .gitignore  README.md  main.py  pyproject.toml
longvideohelper/: __init__.py  audio_clipper.py  audio_extractor.py  chapter_detector.py  chapter_processor.py  keyframe_extractor.py  llm.py  main.py  markdown_generator.py  models.py  transcriber.py  utils.py
