[project]
name = "longvideohelper"
version = "0.1.0"
description = "A tool that uses Whisper and VLM for long video chapter dividing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "openai-whisper>=20231117",
    "webrtcvad>=2.0.10",
    "pydub>=0.25.1",
    "moviepy>=1.0.3",
    "litellm>=1.0.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "setuptools>=65.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "google-genai>=1.49.0",
]

[project.scripts]
longvideohelper = "longvideohelper.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
